--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
+    "dev": "node app.js",
     "git-update": "git add . && git commit -m \"update\" && git push"
   },
   "keywords": [],
